--- a/src/app/package-list/package-list.component.html
+++ b/src/app/package-list/package-list.component.html
@@ -1,5 +1,5 @@
 <section>
-  <ul *ngIf="packageData$ | async as packageData">
+  <ul *ngIf="constructedPackageData$ | async as packageData">
     <li *ngFor="let package of packageData">
       {{ package.package }}
     </li>
