Add routing between package list and details

--- a/src/app/package-list/package-list.component.html
+++ b/src/app/package-list/package-list.component.html
@@ -1,7 +1,9 @@
 <section>
   <ul *ngIf="constructedPackageData$ | async as packageData">
     <li *ngFor="let package of packageData">
-      {{ package.package }}
+      <a [routerLink]="package.package" routerLinkActive="is-active">
+        {{ package.package }}
+      </a>
     </li>
   </ul>
 </section>
