--- a/src/app/package-details/package-details.component.html
+++ b/src/app/package-details/package-details.component.html
@@ -1,6 +1,14 @@
 <div *ngIf="singlePackage$ | async as singlePackage">
   <p>Name: {{ singlePackage.package }}</p>
   <p>Description: {{ singlePackage.description }}</p>
-  <p>Dependecies: {{ singlePackage.depends }}</p> Remove version numbers
-  <p>Reverse dependencies</p>
+  <p *ngIf="singlePackage.depends">
+    Dependecies:
+    <span *ngFor="let dep of singlePackage.depends">{{ dep }}, </span>
+  </p>
+  <p *ngIf="singlePackage.reverseDepends">
+    Reverse dependencies:
+    <span *ngFor="let reverseDepends of singlePackage.reverseDepends"
+      >{{ reverseDepends }},
+    </span>
+  </p>
 </div>
