--- a/src/app/package-details/package-details.component.html
+++ b/src/app/package-details/package-details.component.html
@@ -1,43 +1,62 @@
-<div class="navigation-buttons">
-  <button class="button list-button" routerLink="">Back to package list</button>
-  <button class="button" (click)="getPreviousRoute()">Previous view</button>
-</div>
 <div class="package-details" *ngIf="singlePackage$ | async as singlePackage">
-  <p>Name: {{ singlePackage.package }}</p>
-  <span>Description:</span>
-  <p>{{ singlePackage.description }}</p>
-  <p *ngIf="singlePackage.depends">
-    Dependecies:
-    <span *ngFor="let depend of singlePackage.depends; let last = last">
-      <a
-        *ngIf="depend.link"
-        [routerLink]=""
-        [queryParams]="{ packageName: depend.name }"
-        routerLinkActive="is-active"
-        >{{ depend.name }}
-      </a>
-      <span *ngIf="!depend.link">{{ depend.name }}</span>
-      <span *ngIf="!last">, </span>
-    </span>
-  </p>
-  <p *ngIf="singlePackage.reverseDepends">
-    Reverse dependencies:
-    <span
-      *ngFor="
-        let reverseDepends of singlePackage.reverseDepends;
-        let last = last
-      "
-    >
-      <a
-        *ngIf="reverseDepends.link"
-        [routerLink]=""
-        [queryParams]="{ packageName: reverseDepends.name }"
-        routerLinkActive="is-active"
-      >
-        {{ reverseDepends.name }}
-      </a>
-      <span *ngIf="!reverseDepends.link">{{ reverseDepends.name }}</span>
-      <span *ngIf="!last">, </span>
-    </span>
-  </p>
+  <div class="header">
+    <div class="navigation-buttons">
+      <button class="button list-button" routerLink="">
+        Back to package list
+      </button>
+      <button class="button" (click)="getPreviousRoute()">Previous view</button>
+    </div>
+    <div class="name-container">
+      <h1>{{ singlePackage.package }}</h1>
+    </div>
+  </div>
+  <div class="package-details-info">
+    <div class="property">
+      <h2 class="package-heading">Name:</h2>
+      <p class="package-paragraph">{{ singlePackage.package }}</p>
+    </div>
+    <div class="property">
+      <h2 class="package-heading">Description:</h2>
+
+      <p class="package-paragraph">{{ singlePackage.description }}</p>
+    </div>
+    <div class="property" *ngIf="singlePackage.depends">
+      <h2 class="package-heading">Dependencies:</h2>
+      <p class="package-paragraph">
+        <span *ngFor="let depend of singlePackage.depends; let last = last">
+          <a
+            *ngIf="depend.link"
+            [routerLink]=""
+            [queryParams]="{ packageName: depend.name }"
+            routerLinkActive="is-active"
+            >{{ depend.name }}
+          </a>
+          <span *ngIf="!depend.link">{{ depend.name }}</span>
+          <span *ngIf="!last">, </span>
+        </span>
+      </p>
+    </div>
+    <div class="property" *ngIf="singlePackage.reverseDepends">
+      <h2 class="package-heading">Reverse dependencies:</h2>
+      <p class="package-paragraph">
+        <span
+          *ngFor="
+            let reverseDepends of singlePackage.reverseDepends;
+            let last = last
+          "
+        >
+          <a
+            *ngIf="reverseDepends.link"
+            [routerLink]=""
+            [queryParams]="{ packageName: reverseDepends.name }"
+            routerLinkActive="is-active"
+          >
+            {{ reverseDepends.name }}
+          </a>
+          <span *ngIf="!reverseDepends.link">{{ reverseDepends.name }}</span>
+          <span *ngIf="!last">, </span>
+        </span>
+      </p>
+    </div>
+  </div>
 </div>
